--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "babel-jest": "26.6.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "build": "cd CRWN-CLOTHING/ && yarn install && yarn build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
